--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css"/>
     <link rel="stylesheet" href="style.css">
 </head>
-
+<meta name="google-site-verification" content="ym96i5bnEbfgaGnBfaY7Ncgh_Aa-lrIPFxoy3Gm7F-Q" />
    <body>
     <!-- Header -->
     <header>
