--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <DOCTYPE html>
 <html lang="en">
+    <title>LOGO4U - تصميم شعارات مميزة</title>
 <head>
     <meta name="google-site-verification" content="ym96i5bnEbfgaGnBfaY7Ncgh_Aa-lrIPFxoy3Gm7F-Q" />
     <meta charset="UTF-8">
