--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/png" href="yhaks6wo81.png">
     <link rel="stylesheet" href="style.css"/>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="yhaks6wo81.png">
 </head>
 
    <body>
