--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="google-site-verification" content="ym96i5bnEbfgaGnBfaY7Ncgh_Aa-lrIPFxoy3Gm7F-Q" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="yhaks6wo81.png">
+    <link rel="icon" type="image/png" href="ic.png">
     <link rel="stylesheet" href="style.css"/>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="yhaks6wo81.png">
