--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" href="ic.png">
     <link rel="stylesheet" href="style.css"/>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" href="yhaks6wo81.png">
+    <link rel="icon" type="image/png" href="ic.png">
 </head>
 
    <body>
