--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="style.css"/>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="ic.icon">
+<link rel="icon" href="ic.ico" type="image/x-icon">
+    <link rel="icon" href="ic.ico">
 </head>
 
    <body>
