--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <title>LOGO4U</title>
 <head>
+    <meta name="google-site-verification" content="zQLeBZ_9SNNi3VczuDndFAmknKP7kpNm5hX1eZZmKjQ" />
     <meta name="google-site-verification" content="ym96i5bnEbfgaGnBfaY7Ncgh_Aa-lrIPFxoy3Gm7F-Q" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
