--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
-<DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
-    <title>LOGO4U</title>
 <head>
-    <meta name="google-site-verification" content="zQLeBZ_9SNNi3VczuDndFAmknKP7kpNm5hX1eZZmKjQ" />
-    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css"/>
+    <title>LOGO4U</title>
+    <meta name="google-site-verification" content="zQLeBZ_9SNNi3VczuDndFAmknKP7kpNm5hX1eZZmKjQ" />
+
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="ic.ico" type="image/x-icon">
-    <link rel="icon" href="ic.ico">
-</head>
+    <!-- أيقونة الموقع -->
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" href="yhaks6wo81.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="yhaks6wo81.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="yhaks6wo81.png
 
    <body>
     <!-- Header -->
