--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="keywords" content="تصميم شعار, تصميم شعارات, لوجو احترافي, لوجو, تصميم لوجو" />
+    <meta name="keywords" content="تصميم, تصميم جرافيك, لوجو, شعار, تصميم شعار, تصميم شعارات, تصميم لوجو, لوجو احترافي, تصميم احترافي, مصمم شعارات" />
+    <meta name="keywords" content="logo design, professional logo, custom logo, graphic design, brand identity, logo4u, Arabic logo design" />
+    <meta name="keywords" content="شعار مطعم, شعار قناة يوتيوب, شعار شركة, شعار تطبيق, شعار متجر, تصميم هوية بصرية, تصميم لافتات, تصميم كروت" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LOGO4U - تصميم شعارات مميزة تعبر عن هويتك</title>
